--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -18,22 +18,41 @@
 <div id="app">
     <v-app>
     <v-row>
-      <v-col class="d-flex align-center justify-around">
-        <v-btn @click="prevWeek" class="mr-5">
+      <v-col class="d-flex align-center justify-space-around">
+        <v-btn @click="prevWeek" class="mr-5" style="width: 20%;">
         <v-icon class="mr-3">fas fa-chevron-left</v-icon>
+          <template v-if="type === 'week'">
             SEMAINE PRECEDANTE
+          </template>
+          <template v-else-if="type === 'day'">
+            JOUR PRECEDANT
+          </template>
+          <template v-else="type === 'month'">
+            MOIS PRECEDANT
+          </template>
       </v-btn>
 
+      <div style="width: 35%">
       <v-select
         v-model="type"
         :items="types"
         hide-details
         class="ma-2"
-        label="type"
+        item-text="label"
+        item-value="key"
       ></v-select>
+    </div>
 
-      <v-btn @click="nextWeek" class="ml-5">
-            SEMAINE SUIVANTE
+      <v-btn @click="nextWeek" class="ml-5" style="width: 20%;">
+        <template v-if="type==='week'">
+          SEMAINE SUIVANT
+        </template>
+        <template v-else-if="type==='day'">
+          JOUR SUIVANT
+        </template>
+        <template v-else="type==='month'">
+          MOIS SUIVANT
+        </template>
         <v-icon class="ml-3">fas fa-chevron-right</v-icon>
       </v-btn>
     </v-col>
@@ -49,6 +68,12 @@
               color="primary"
               :type="type"
               locale="fr"
+              :weekdays="[1, 2, 3, 4, 5, 6, 0]"
+              @click:event="openModalNote"
+              :first-interval= 8  
+              :interval-minutes= 60
+              :interval-count= 12
+
             >
             <template v-slot:event="{start, end, event}">
               <div class="d-flex align-center justify-center" style="height: 100%;">
@@ -63,6 +88,53 @@
           </v-sheet>
         </v-col>
       </v-row>
+
+      <v-dialog
+      v-model="modalNote"
+      width="500"
+    >
+      
+      <v-card>
+        <v-card-title class="text-h5 grey lighten-2">
+          Noter
+        </v-card-title>
+
+
+          <v-rating
+          class="ml-2 my-3"
+          v-model="formAvis.note"
+          color="yellow darken-3"
+          background-color="grey darken-1"
+          empty-icon="$ratingFull"
+          half-increments
+          hover
+          large
+        ></v-rating>
+
+        <v-textarea v-model="formAvis.commentaire" class="mx-5" outlined label="Commentaire">
+
+        </v-textarea>
+
+        <v-text-field v-model="formAvis.emailEtudiant" class="mx-5" label="Email" outlined>
+
+        </v-text-field>
+
+
+        <v-divider></v-divider>
+
+        <v-card-actions>
+          <v-spacer></v-spacer>
+          <v-btn
+            color="primary"
+            text
+            @click="createAvis"
+          >
+            NOTER
+          </v-btn>
+        </v-card-actions>
+      </v-card>
+
+    </v-dialog>
     </v-app>
 </div>
 
@@ -75,7 +147,16 @@
       value: moment(this.today).startOf('week').add(1, "day").toString(),
       events: [],
       type: 'week',
-      types: ["week", "day", "month"]
+      types: [{key: "week", label: "Semaine"}, {key: "day", label: "Jour"}, {key: "month", label: "Mois"}],
+      modalNote: false,
+      formAvis: {
+        note: 0,
+        commentaire: '',
+        emailEtudiant: '',
+        type: 'cours'
+      },
+      id: 0,
+      erreurs: [],
     }),
     mounted () {
         this.getCours();
@@ -83,27 +164,39 @@
     methods: {
         getCours() {
             axios.get('http://localhost:8667/api/cours').then((resp) => {
-                console.log(resp);
                 let cours = resp.data;
                 for(let item of cours) {
                     this.events.push({
+                      id: item.id,
                       type: item.type, 
                       professeur: item.professeur.nom + ' ' + item.professeur.prenom[0] + '.', 
                       salle: item.salle, 
                       matiere: item.matiere.titre, 
-                      start: moment(item.dateHeureDebut.date).format('YYYY-MM-DD hh:mm'), 
-                      end: moment(item.dateHeureFin.date).format('YYYY-MM-DD hh:mm')})
+                      start: moment(item.dateHeureDebut.date).format('YYYY-MM-DD HH:mm'), 
+                      end: moment(item.dateHeureFin.date).format('YYYY-MM-DD HH:mm')
+                    });
                 }
-                console.log(this.events);
             }).catch((err) => {
                 console.warn(err);
             });
         },
         nextWeek() {
-            this.value = new Date(moment(this.value).add(1, 'week').format('YYYY-MM-DD hh:mm').toString());
+            this.value = new Date(moment(this.value).add(1, this.type).format('YYYY-MM-DD HH:mm').toString());
         },
         prevWeek() {
-            this.value = new Date(moment(this.value).subtract(1, 'week').format('YYYY-MM-DD hh:mm').toString());
+            this.value = new Date(moment(this.value).subtract(1, this.type).format('YYYY-MM-DD HH:mm').toString());
+        },
+        openModalNote(event) {
+          this.id = event.event.id;
+          this.modalNote = true;
+        },
+        createAvis() {
+          console.log(this.formAvis)
+          axios.post('http://localhost:8667/api/cours/' + this.id + '/avis', this.formAvis).then((resp) => {
+                    console.log(resp);
+                }).catch((err) => {
+                    this.erreurs = Object.values(err.response.data.Message)
+                })
         },
     },
     })
