--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -41,6 +41,7 @@
         item-text="label"
         item-value="key"
       ></v-select>
+      <div style="text-align:center;"> {{ (type==='week' ? 'Du ' : '') + debut }} {{ type === 'week' ? 'au ' + fin : '' }}</div>
     </div>
 
       <v-btn @click="nextWeek" class="ml-5" style="width: 20%;">
@@ -70,6 +71,7 @@
               locale="fr"
               :weekdays="[1, 2, 3, 4, 5, 6, 0]"
               @click:event="openModalNote"
+              @change="onChange"
               :first-interval= 8  
               :interval-minutes= 60
               :interval-count= 12
@@ -99,7 +101,13 @@
           Noter
         </v-card-title>
 
-
+        <div class="mx-5 mt-3">
+        <span><span style="font-weight: bold;">Professeur: </span> {{ currentEvent.professeur }} (<a href="edt.php">noter les professeurs</a>)</span><br>
+        <span><span style="font-weight: bold;">Salle: </span>{{ currentEvent.salle }}</span><br>
+        <span><span style="font-weight: bold;">Matiere: </span>{{ currentEvent.matiere }}</span><br>
+        <span><span style="font-weight: bold;">Cours: </span>{{ currentEvent.type }}</span>
+      </div>
+      <div class="d-flex align-center">
           <v-rating
           class="ml-2 my-3"
           v-model="formAvis.note"
@@ -111,6 +119,8 @@
           large
         ></v-rating>
 
+        (<a @click="openListAvisModal">voir tout les avis</a>)
+      </div>
         <v-textarea v-model="formAvis.commentaire" class="mx-5" outlined label="Commentaire">
 
         </v-textarea>
@@ -118,6 +128,10 @@
         <v-text-field v-model="formAvis.emailEtudiant" class="mx-5" label="Email" outlined>
 
         </v-text-field>
+
+        <ul class="mb-3 ml-5" v-if="erreurs.length > 0">
+          <li style="color: #D03D3D;" v-for="erreur in erreurs"> {{ erreur }} </li>
+        </ul>
 
 
         <v-divider></v-divider>
@@ -135,6 +149,59 @@
       </v-card>
 
     </v-dialog>
+
+    <v-dialog
+      v-model="modalAvis"
+      width="500"
+    >
+  
+    <v-card>
+      <v-card-title class="text-h5 grey lighten-2">
+       <v-icon @click="modalAvis=false;modalNote=true" class="mr-6">fas fa-arrow-left</v-icon> Avis 
+      </v-card-title>
+
+
+      <v-card class="mx-5 my-3 px-5 py-3" v-for="item in avis" elevation="2">
+        <div class="mb-2 d-flex align-center justify-space-between">
+      <span style="font-weight: bold;">{{ item.emailEtudiant }}</span>
+      <v-rating
+        :value="item.note"
+        color="yellow darken-3"
+        background-color="grey darken-1"
+        empty-icon="$ratingFull"
+        half-increments
+        hover
+        readonly
+        size="20"
+      ></v-rating>
+    </div>
+    <v-textarea
+          outlined
+          label="Commentaire"
+          :value="item.commentaire"
+          readonly
+          auto-grow
+          rows="2"
+        ></v-textarea>
+
+      </v-card>
+
+
+      <v-divider></v-divider>
+      <v-card-actions>
+
+        <v-spacer></v-spacer>
+        <v-btn
+          color="primary"
+          text
+          @click="modalAvis = false"
+        >
+          Fermer
+        </v-btn>
+      </v-card-actions>
+      </v-card>
+  
+  </v-dialog>
     </v-app>
 </div>
 
@@ -143,25 +210,48 @@
       el: '#app',
       vuetify: new Vuetify(),
       data: () => ({
-      today: moment(new Date('2022-03-10')).format('YYYY-MM-DD hh:mm'),
+      today: moment(new Date()).format('YYYY-MM-DD hh:mm'),
       value: moment(this.today).startOf('week').add(1, "day").toString(),
+      debut: moment(this.value).startOf('week').add(1, "day"),
+      fin: moment(this.value).endOf('week').add(1, "day"),
       events: [],
       type: 'week',
       types: [{key: "week", label: "Semaine"}, {key: "day", label: "Jour"}, {key: "month", label: "Mois"}],
+      optionMois: { month: 'long', year: 'numeric'},
+      optionSemaine: { day: 'numeric', month: 'long',year: 'numeric'},
+      optionJour: { day: 'numeric', month: 'long',year: 'numeric'},
       modalNote: false,
       formAvis: {
         note: 0,
         commentaire: '',
-        emailEtudiant: '',
+        emailEtudiant: null,
         type: 'cours'
       },
-      id: 0,
+      currentEvent: {},
       erreurs: [],
+      modalAvis: false,
+      avis: [],
     }),
     mounted () {
         this.getCours();
     },
     methods: {
+      onChange(event) {
+        console.log(event)
+          if(this.type === 'day') {            
+            let tmp = new Date(moment(event.start.date).locale('fr')).toLocaleDateString('fr-FR', this.optionJour);
+            this.debut = tmp.substr(0,1).toUpperCase() + tmp.substr(1,tmp.length);
+          } else if (this.type === 'month') {
+            let tmp = new Date(moment(event.start.date).locale('fr')).toLocaleDateString('fr-FR', this.optionMois);
+            this.debut = tmp.substr(0,1).toUpperCase() + tmp.substr(1,tmp.length);
+          } else {
+            let tmp = new Date(moment(event.start.date).locale('fr')).toLocaleDateString('fr-FR', this.optionSemaine);
+            this.debut = tmp.substr(0,1).toUpperCase() + tmp.substr(1,tmp.length);
+            let tmp2 = new Date(moment(event.end.date).locale('fr')).toLocaleDateString('fr-FR', this.optionSemaine);
+            this.fin = tmp2.substr(0,1).toUpperCase() + tmp2.substr(1,tmp.length);
+          }
+          
+      },
         getCours() {
             axios.get('http://localhost:8667/api/cours').then((resp) => {
                 let cours = resp.data;
@@ -184,20 +274,33 @@
             this.value = new Date(moment(this.value).add(1, this.type).format('YYYY-MM-DD HH:mm').toString());
         },
         prevWeek() {
-            this.value = new Date(moment(this.value).subtract(1, this.type).format('YYYY-MM-DD HH:mm').toString());
+            this.value = new Date(moment(this.value).subtract(1, this.type).format('YYYY-MM-DD HH:mm').toString()); 
         },
         openModalNote(event) {
-          this.id = event.event.id;
+          this.erreurs = [];
+          this.currentEvent = event.event;
           this.modalNote = true;
         },
         createAvis() {
           console.log(this.formAvis)
-          axios.post('http://localhost:8667/api/cours/' + this.id + '/avis', this.formAvis).then((resp) => {
+          axios.post('http://localhost:8667/api/cours/' + this.currentEvent.id + '/avis', this.formAvis).then((resp) => {
                     console.log(resp);
                 }).catch((err) => {
                     this.erreurs = Object.values(err.response.data.Message)
-                })
+                });
         },
+        openListAvisModal() {
+            this.modalNote = false;
+            this.modalAvis = true;
+            this.getAvis();
+        },
+        getAvis() {
+          axios.get('http://localhost:8667/api/cours/' + this.currentEvent.id + '/avis').then((resp) => {
+            this.avis = resp.data;
+          }).catch((err) => {
+            console.warn(err);
+          });
+        }
     },
     })
 
